--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,21 @@ dependencies = [
     "uvicorn (==0.34.3)"
 ]
 
+[tool.poetry.dependencies]
+python = "^3.10"
+fastapi = "^0.115.0"
+uvicorn = "^0.34.0"
+sqlalchemy = "^2.0.0"
+httpx = "^0.28.0"
+boto3 = "^1.38.0"
+python-dotenv = "^1.0.0"
+apscheduler = "^3.10.4"
+pydantic = "^2.0.0"
+python-jose = "^3.3.0"
+passlib = "^1.7.4"
+bcrypt = "^4.0.1"
+pyjwt = "^2.8.0"
+aiofiles = "^23.2.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
